rplace/templates/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rplace-backend
  namespace: pixel-war
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
