rplace/templates/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wss-rplace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    # this one annotation is making the websocket work.
    nginx.ingress.kubernetes.io/websocket-services: rplace-backend
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  rules:
  - host: place.inpt.fr
    http:
      paths:
      - path: /socket.io/
        pathType: Prefix
        backend:
          service:
            name: rplace-backend
            port:
              number: 8080
